--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "js-beautify": "^1.5.10",
+    "lodash": "^3.10.1",
     "nodemon": "^1.4.1",
     "path": "^0.11.14",
     "rc": "~0.5.0",
